# python-graph-client

./: .gitignore  Makefile  README.md  pyproject.toml
sample/: keyfile_example.json  sample.py  sample_bad_request.py  sample_request.py  sample_script.py
src/graphqlclient/: __about__.py  __init__.py  client.py
